Update epsisode names in yaml

--- a/config.yaml
+++ b/config.yaml
@@ -68,8 +68,8 @@ contact: 'https://cms-talk.web.cern.ch/c/physics/cat/cat-support/277' # FIXME
 
 # Order of episodes in your lesson
 episodes: 
-- introduction.md
-- undoing-locally.md
+- 01-introduction.md
+- 02-undoing-locally.md
 
 # Information for Learners
 learners: 
