Add initial 05 and 06

--- a/config.yaml
+++ b/config.yaml
@@ -72,6 +72,8 @@ episodes:
 - 02-undoing-locally.md
 - 03-undoing-remote.md
 - 04-working-together.md
+- 05-resolving-conflicts.md
+- 06-keeping-track-issues.md
 
 # Information for Learners
 learners: 
